fixed some mobile layout issues padding 2 big

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,6 @@
 
 /* Base repeating layer */
 .graphic-layer0 {
-  -webkit-appearance: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -75,7 +74,7 @@
 
 
 .content-area {
-  padding: var(--spacing-lg);
+  padding: var(--spacing-sm);
   padding-top: calc(var(--spacing-xl) * 2);
   background-color: rgba(75, 121, 248, 0.103);
   z-index: 2;
@@ -119,17 +118,26 @@ body {
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
-
+  overflow-x: hidden;
   background-image: url('/masterbg2.png');
   background-repeat: repeat-y;
   background-position: center top;
-  background-size: 100% auto;
+  background-size: contain;
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.5;
   font-weight: 400;
 }
 
+/*Media queries for smaller screen*/
+@media screen and (min-width: 768px) {
+  body {
+  background-image: url('/masterbg2.png');
+  background-repeat: repeat-y;
+  background-position: center top;
+  background-size: 100% auto;
+  }
+}
 h1 {
   font-size: 1.5rem;
   letter-spacing: -0.05em;
