--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0.5rem;
+  padding: 0.1rem;
   border-left: 2px solid rgb(0,0,0);
   color: white;
   font-size: 0.9rem;
